improved documentation "css" style sheet for disabled access: underlined links (so that readers for the blind will understand them as links and follow them correctly) and darkened the link color to improve contrast.

--- a/doc/1.manual/resources/pdmanual.css
+++ b/doc/1.manual/resources/pdmanual.css
@@ -151,8 +151,8 @@ KBD {
 /* standard link */
 
 a:link {
-    text-decoration: none;
-    color: #006699;
+    text-decoration: underline;
+    color: #002299;
 }
 
 a:visited {
